--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
     "hbs": "~4.0.1",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
