--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
+    "firebase": "^4.9.1",
     "hbs": "~4.0.1",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
