--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hbs": "~4.0.1",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^2.0.4"
   }
 }
