--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
